--- a/index.html
+++ b/index.html
@@ -19,6 +19,28 @@
         <title>Responsive Homepage Homework</title>
 </head>
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <a href="index.html" title="Homepage">
+                <img src="images/logo.jpg" class="logo d-none d-md-block" alt="Barbra Logo" />
+                <img src="images/logo-small.jpg" class="logo d-block d-md-none" alt="Barbra Logo" />
+            </a>
+            <ul>
+                <li class="active">
+                    <a href="index.html" title="Homepage"> Home</a>
+                </li>
+                <li>
+                    <a href="about.html" title="About Barbra"> About</a>
+                </li>
+                <li>
+                    <a href="work.html" title="Barbra's work"> Work</a>
+                </li>
+                <li>
+                    <a href="contact.html" title="Contact Barbra"> Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <div class="hero">
         <p>Hello, I'm </p>
         <h1> Barbra Wasiwo</h1>
@@ -83,6 +105,42 @@
                 </div>
             </div>
         </div>
+    </div>
+    <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+            <div>
+                <h3>Work Inquiry</h3>
+                <p class="text-muted">Let's work together</p>
+            </div>
+            <div>
+                <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Barbra">
+                    Contact me
+                </a>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+            <a href="mailto:barbrawasiwo@gmail.com" class="email-link" title="Email Barbra">
+                barbrawasiwo@gmail.com
+            </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+            <a href="https://www.github.com/barbzt30 target="_blank" title="GitHub Profile">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.instragram.com/barbra-wasiwo" target="_blank" title="instragram Profile">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.twitter.com/barbra-wasiwo" target="_blank" title="Twitter Profile">
+                <i class="fab fa-twitter"></i>
+            </a>
+        </div>
+        <p class="text-center mt-5">
+            ✌️ This website was coded by Barbra Wasiwo, and is
+            <a href="https://github.com/barbzt30/Responsive-Homepage-Homework" target="_blank">
+                open-sourced
+            </a>
+        </p>
+    </footer>
     </div>
 </body>
 </html>
